# pkgcreator

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml
.github/workflows/: publish-python-package.yml  test-python-package.yml
docs/figs/: logo_tools.py
src/: github_download.py  github_download.sh  make_python_package.py
src/pkgcreator/: __init__.py  __main__.py  builder.py  cli.py  cli_tools.py  file_contents.py  filetypes.py  ghutils.py  gitrepo.py  logging_config.py  logging_tools.py  make_python_package.py  venv_manager.py
tests/: problem_finder.py  test_creation.py  test_creation_mode.py  test_ghutils.py  test_git.py  test_tools.py  test_venv_manager.py
